# cs231n-25

./: .gitignore  pyproject.toml  readme.md  requirments.txt
assignment1/: FullyConnectedNets.ipynb  features.ipynb  knn.ipynb  readme.md  softmax.ipynb  two_layer_net.ipynb
assignment1/cs231n/classifiers/: fc_net.py  k_nearest_neighbor.py  linear_classifier.py  softmax.py
