[project]
name = "cs231n-25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "future>=1.0.0",
    "imageio>=2.37.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pip>=25.3",
    "scipy>=1.15.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

# 启用自动选择torch版本功能
[tool.uv]
preview = true